--- a/eTools Ultimate/Views/Pages/ItemsPage.xaml
+++ b/eTools Ultimate/Views/Pages/ItemsPage.xaml
@@ -1494,7 +1494,6 @@
             </StackPanel>
         </DataTemplate>
 
-
         <!--  DataTemplate: Pet  -->
         <DataTemplate x:Key="PetSectionTemplate">
             <StackPanel>
@@ -1519,6 +1518,267 @@
                             Grid.Row="1"
                             OriginalItemsSource="{Binding ViewModel.MoverIdentifiers, RelativeSource={RelativeSource AncestorType=Page}}"
                             Text="{Binding LinkKindMoverIdentifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                    </Grid>
+                </UniformGrid>
+            </StackPanel>
+        </DataTemplate>
+
+        <!--  DataTemplate: Buff bead  -->
+        <DataTemplate x:Key="BuffBeadSectionTemplate">
+            <StackPanel>
+                <Separator Margin="0,10,0,5" />
+                <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Buff bead'}" />
+                <UniformGrid Columns="2">
+                    <!--  Duration  -->
+                    <Grid Style="{StaticResource FormFieldStyle}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Duration (days, hours, minutes)'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Duration" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:NumberBox
+                                Grid.Column="0"
+                                ClearButtonEnabled="False"
+                                Minimum="0"
+                                SpinButtonPlacementMode="Inline"
+                                Value="{Binding AbilityMinDurationDays, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                ClearButtonEnabled="False"
+                                Maximum="59"
+                                Minimum="0"
+                                SpinButtonPlacementMode="Inline"
+                                Value="{Binding AbilityMinDurationHours, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <ui:NumberBox
+                                Grid.Column="2"
+                                Margin="5,0,0,0"
+                                ClearButtonEnabled="False"
+                                Maximum="59"
+                                Minimum="0"
+                                SpinButtonPlacementMode="Inline"
+                                Value="{Binding AbilityMinDurationMinutes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </Grid>
+                    <!--  Grade  -->
+                    <Grid Style="{StaticResource FormFieldStyle}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Grade'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Grade" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <ui:NumberBox Grid.Row="1" Value="{Binding DwAbilityMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </Grid>
+                    <!--  Effect 1  -->
+                    <Grid Style="{StaticResource FormFieldStyle}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Effect 1'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="First effect applied by the item" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:AutoSuggestBox
+                                Grid.Column="0"
+                                Margin="0,0,5,0"
+                                OriginalItemsSource="{Binding DataContext.DestIdentifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                Text="{Binding DestParam1Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                IsEnabled="{Binding DwDestParam1, Mode=OneWay, Converter={StaticResource NullValueToBooleanConverter}}"
+                                Value="{Binding NAdjParamVal1, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </Grid>
+
+                    <!--  Effect 2  -->
+                    <Grid Style="{StaticResource FormFieldStyle}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Effect 2'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Second effect applied by the item" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:AutoSuggestBox
+                                Grid.Column="0"
+                                Margin="0,0,5,0"
+                                OriginalItemsSource="{Binding DataContext.DestIdentifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                Text="{Binding DestParam2Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                IsEnabled="{Binding DwDestParam2, Mode=OneWay, Converter={StaticResource NullValueToBooleanConverter}}"
+                                Value="{Binding NAdjParamVal2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </Grid>
+
+                    <!--  Effect 3  -->
+                    <Grid Style="{StaticResource FormFieldStyle}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Effect 3'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Third effect applied by the item" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:AutoSuggestBox
+                                Grid.Column="0"
+                                Margin="0,0,5,0"
+                                OriginalItemsSource="{Binding DataContext.DestIdentifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                Text="{Binding DestParam3Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                IsEnabled="{Binding DwDestParam3, Mode=OneWay, Converter={StaticResource NullValueToBooleanConverter}}"
+                                Value="{Binding NAdjParamVal3, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </Grid>
+
+                    <!--  Effect 4  -->
+                    <Grid Style="{StaticResource FormFieldStyle}" Visibility="{Binding ViewModel.HasExpandedDestValues, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=Page}}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Effect 4'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Fourth effect applied by the item" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:AutoSuggestBox
+                                Grid.Column="0"
+                                Margin="0,0,5,0"
+                                OriginalItemsSource="{Binding DataContext.DestIdentifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                Text="{Binding DestParam4Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                IsEnabled="{Binding DwDestParam4, Mode=OneWay, Converter={StaticResource NullValueToBooleanConverter}}"
+                                Value="{Binding NAdjParamVal4, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </Grid>
+
+                    <!--  Effect 5  -->
+                    <Grid Style="{StaticResource FormFieldStyle}" Visibility="{Binding ViewModel.HasExpandedDestValues, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=Page}}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Effect 5'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Fifth effect applied by the item" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:AutoSuggestBox
+                                Grid.Column="0"
+                                Margin="0,0,5,0"
+                                OriginalItemsSource="{Binding DataContext.DestIdentifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                Text="{Binding DestParam5Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                IsEnabled="{Binding DwDestParam5, Mode=OneWay, Converter={StaticResource NullValueToBooleanConverter}}"
+                                Value="{Binding NAdjParamVal5, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </Grid>
+
+                    <!--  Effect 6  -->
+                    <Grid Style="{StaticResource FormFieldStyle}" Visibility="{Binding ViewModel.HasExpandedDestValues, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=Page}}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Effect 6'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Sixth effect applied by the item" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:AutoSuggestBox
+                                Grid.Column="0"
+                                Margin="0,0,5,0"
+                                OriginalItemsSource="{Binding DataContext.DestIdentifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                Text="{Binding DestParam5Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                IsEnabled="{Binding DwDestParam6, Mode=OneWay, Converter={StaticResource NullValueToBooleanConverter}}"
+                                Value="{Binding NAdjParamVal6, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
                     </Grid>
                 </UniformGrid>
             </StackPanel>
@@ -2310,6 +2570,9 @@
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding ItemsView.CurrentItem.Type}" Value="{x:Static itemModels:ItemType.Pet}">
                                             <Setter Property="ContentTemplate" Value="{StaticResource PetSectionTemplate}" />
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding ItemsView.CurrentItem.Type}" Value="{x:Static itemModels:ItemType.BuffBead}">
+                                            <Setter Property="ContentTemplate" Value="{StaticResource BuffBeadSectionTemplate}" />
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding ItemsView.CurrentItem.Type}" Value="{x:Static itemModels:ItemType.Other}">
                                             <Setter Property="Visibility" Value="Hidden" />
