ItemsPage handle furniture

--- a/eTools Ultimate/Views/Pages/ItemsPage.xaml
+++ b/eTools Ultimate/Views/Pages/ItemsPage.xaml
@@ -1788,7 +1788,7 @@
         <DataTemplate x:Key="PaperingSectionTemplate">
             <StackPanel>
                 <Separator Margin="0,10,0,5" />
-                <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Buff bead'}" />
+                <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Papering'}" />
                 <UniformGrid Columns="2">
                     <!--  Duration  -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -1871,6 +1871,79 @@
                                 <Image Margin="2" Source="{Binding PaperingTexture}" />
                             </Border>
                         </Grid>
+                    </Grid>
+                </UniformGrid>
+            </StackPanel>
+        </DataTemplate>
+
+        <!--  DataTemplate: Furniture  -->
+        <DataTemplate x:Key="FurnitureSectionTemplate">
+            <StackPanel>
+                <Separator Margin="0,10,0,5" />
+                <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Furniture'}" />
+                <UniformGrid Columns="2">
+                    <!--  Duration  -->
+                    <Grid Style="{StaticResource FormFieldStyle}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Duration (days, hours, minutes)'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Duration" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:NumberBox
+                                Grid.Column="0"
+                                ClearButtonEnabled="False"
+                                Minimum="0"
+                                SpinButtonPlacementMode="Inline"
+                                Value="{Binding AbilityMinDurationDays, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <ui:NumberBox
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                ClearButtonEnabled="False"
+                                Maximum="59"
+                                Minimum="0"
+                                SpinButtonPlacementMode="Inline"
+                                Value="{Binding AbilityMinDurationHours, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <ui:NumberBox
+                                Grid.Column="2"
+                                Margin="5,0,0,0"
+                                ClearButtonEnabled="False"
+                                Maximum="59"
+                                Minimum="0"
+                                SpinButtonPlacementMode="Inline"
+                                Value="{Binding AbilityMinDurationMinutes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </Grid>
+                    <!--  Control  -->
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Control'}" />
+                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                <ui:SymbolIcon.ToolTip>
+                                    <ToolTip Content="Mover" />
+                                </ui:SymbolIcon.ToolTip>
+                            </ui:SymbolIcon>
+                        </StackPanel>
+                        <ui:AutoSuggestBox
+                            Grid.Row="1"
+                            OriginalItemsSource="{Binding ViewModel.ControlIdentifiers, RelativeSource={RelativeSource AncestorType=Page}}"
+                            Text="{Binding LinkKindControlIdentifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
                     </Grid>
                 </UniformGrid>
             </StackPanel>
@@ -2668,6 +2741,9 @@
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding ItemsView.CurrentItem.Type}" Value="{x:Static itemModels:ItemType.Papering}">
                                             <Setter Property="ContentTemplate" Value="{StaticResource PaperingSectionTemplate}" />
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding ItemsView.CurrentItem.Type}" Value="{x:Static itemModels:ItemType.Furniture}">
+                                            <Setter Property="ContentTemplate" Value="{StaticResource FurnitureSectionTemplate}" />
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding ItemsView.CurrentItem.Type}" Value="{x:Static itemModels:ItemType.Other}">
                                             <Setter Property="Visibility" Value="Hidden" />
